# market-sentiment-EDA

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
notebooks/: eda.ipynb
src/scripts/: data_loader.py  feature_builder.py  paths.py  visualizer.py
